# 16S-rRNA-Pipeline

./: README.md  pyproject.toml
src/16S_rRNA_Pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bio_16s_pipeline/: abundance_matrix.py  calculate_abundance.py  chimera_removal.py  common_func.py  db_utils.py  k_selection.py  kmer_db.py  logs.py  read_preprocessing.py
